[package]
name = "nasoone-lib"
description = "A multithreading ibrary for collecting network traffic statistics"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/davideaimar/nasoone-lib"
repository = "https://github.com/davideaimar/nasoone-lib"
readme = "README.md"
keywords = ["network", "pcap", "statistics", "multithreading", "etherparse"]
categories = ["development-tools::build-utils"]


[lib]
doctest = false


[dependencies]
pcap = "0.9.2"
crossbeam-channel = "0.5.5"
num_cpus = "1.13.1"
etherparse = "0.12.0"
